  * Respect locally-installed certificates (ajkessel)
  * Re-add a `--noauth_local_server` to provide instructions for authenticating
    from a remote system using port forwarding
  * Migrate data files like ~/.gcalcli_oauth into standard data file paths
    (with fallback to migrate detected files into the new paths)
  * Add support for $GCALCLI_CONFIG env var and deprecate --config-folder

v4.4.0
  * Fix lots of bugs by switching from deprecated oauth2client to
    google_auth_oauthlib
  * Friendlier help output when `import` command is missing vobject extra
  * `import` command more gracefully handles existing events to avoid duplicates
    and unnecessary edits (tsheinen, cryhot)
  * Handle encoding/decoding errors more gracefully by replacing with
    placeholder chars instead of blowing up
  * Fix `--lineart` option failing with unicode errors
  * `quick` command now prompts for which calendar to use when ambiguous
  * Fix `--nodeclined` option failing on events with aliased email
  * Fix event list commands like `agenda` returning some events that don't
    actually match their search criteria due to pagination bug (kbulygin)
  * `add` command now supports `--end` as an alternative to `--duration`
    (michaelPotter)

v4.3.0
  * Adds 'conference' to details display (michaelhoffman)

v4.2.1
  * Remove python2 support
  * Allow flexible notion for durations (flicken) 
  * new `conflicts` command (flicken)
  * Fixed issue when locale.nl_langinfo isn't available
  * Fixed IndexError when attendee cannot be found in _DeclinedEvent (navignaw)

v4.2.0
  * Prompt user for calendar on `add' when it isn't specified
  * Add `end' time to details view
  * New `updates' command
  * Automatically use available console width

v4.1.1
  * Fixed regression on now marking
  * Fixed version string management

v4.1.0
  * Removed url shortening due to Google deprecation #440

v4.0.4
  * Minor bugfixes: conky colors, issues with setup.py

v4.0.0