@@ -6,7 +6,7 @@ usage: gcalcli [-h] [--version] [--client-id CLIENT_ID]
                [--default-calendar DEFAULT_CALENDARS]
                [--locale LOCALE] [--refresh] [--nocache] [--conky]
                [--nocolor] [--lineart {fancy,unicode,ascii}]
-               {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind}
+               {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind,util}
                ...
 
 Google Calendar Command Line Interface
@@ -35,7 +35,7 @@ configuration:
     (example: https://github.com/insanum/gcalcli/issues/513).
 
 positional arguments:
-  {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind}
+  {list,search,edit,delete,agenda,agendaupdate,updates,conflicts,calw,calm,quick,add,import,remind,util}
                         Invoking a subcommand with --help prints
                         subcommand usage.
     list                list available calendars
@@ -55,6 +55,8 @@ positional arguments:
     import              import an ics/vcal file to a calendar
     remind              execute command if event occurs within <mins>
                         time
+    util                Low-level utility commands for introspection,
+                        dumping schemas, etc
 
 options:
   -h, --help            show this help message and exit
