@@ -6,6 +6,7 @@ v4.5.0
   * Migrate data files like ~/.gcalcli_oauth into standard data file paths
     (with fallback to migrate detected files into the new paths)
   * Add support for $GCALCLI_CONFIG env var and deprecate --config-folder
+  * Add support for config.toml file with section "calendars"
 
 v4.4.0
   * Fix lots of bugs by switching from deprecated oauth2client to
